--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,3 +13,8 @@ body{
 .abc:hover{
     background-color: rgb(48, 141, 113);
 }
+#form{
+    margin: 2vh;
+    padding: 1vh;
+    background-color: lightcyan;
+}
