--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,13 +10,13 @@
     <body>
         <div class="login-box">
             <h1>
-                REGISTER
+                SAFAR
             </h1>
             <div class="textbox1">
-                <form  method="POST" action="/send">
+               <!-- <form  method="POST" action="/send">
                     <input  id="form" type="text" name="place" required placeholder="place">
                     <input type="submit" value="Submit"><br>
-                </form>
+                </form>-->
                     <h3>Which kind of Destination??</h3>
                     <button class="abc" >Rainy</button><br>
                     <button class="abc">Cold</button><br>
