--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,9 +18,9 @@
                     <input type="submit" value="Submit"><br>
                 </form>-->
                     <h3>Which kind of Destination??</h3>
-                    <button class="abc" >Rainy</button><br>
-                    <button class="abc">Cold</button><br>
-                    <button class="abc">Warm</button>
+                    <button id="rainy" class="abc" >Rainy</button><br>
+                    <button id="cold" class="abc">Cold</button><br>
+                    <button id="warm" class="abc">Warm</button>
             </div>
             <% if(success != '') { %>
                 <div class="success">
@@ -40,5 +40,7 @@
                 <% } %>
             </div>
         </div>
+        
     </body>
+
 </html>
