--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,16 +12,28 @@
             <h1>
                 SAFAR
             </h1>
+            <form action="/update">
+                <input type="submit" value="update" placeholder="Update">
+            </form>
             <div class="textbox1">
                <!-- <form  method="POST" action="/send">
                     <input  id="form" type="text" name="place" required placeholder="place">
                     <input type="submit" value="Submit"><br>
                 </form>-->
                     <h3>Which kind of Destination??</h3>
-                    <button id="rainy" class="abc" >Rainy</button><br>
+                    <!-- <button id="rainy" class="abc" >Rainy</button><br>
                     <button id="cold" class="abc">Cold</button><br>
-                    <button id="warm" class="abc">Warm</button>
+                    <button id="warm" class="abc">Warm</button> -->
             </div>
+            <form action="/rainy">
+                <input type="submit" value="rainy" placeholder="rainy">
+            </form>
+            <form action="/cold">
+                <input type="submit" value="cold" placeholder="cold">
+            </form>
+            <form action="/warm">
+                <input type="submit" value="warm" placeholder="warm">
+            </form>
             <% if(success != '') { %>
                 <div class="success">
                     <h1>
