modified if else

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -55,7 +55,12 @@
                 <% } %>
             </div> --}}
             {{success}}
-            {{Places}}
+            <div>
+                <ul>
+                    {{Places}}
+                </ul>
+            </div>
+            
             {{error}}
         </div>
         
