--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,14 +16,7 @@
                 <input type="submit" value="update" placeholder="Update">
             </form>
             <div class="textbox1">
-               <!-- <form  method="POST" action="/send">
-                    <input  id="form" type="text" name="place" required placeholder="place">
-                    <input type="submit" value="Submit"><br>
-                </form>-->
-                    <h3>Which kind of Destination??</h3>
-                    <!-- <button id="rainy" class="abc" >Rainy</button><br>
-                    <button id="cold" class="abc">Cold</button><br>
-                    <button id="warm" class="abc">Warm</button> -->
+                <h3>Which kind of Destination??</h3>
             </div>
             <form action="/rainy">
                 <input type="submit" value="rainy" placeholder="rainy">
@@ -34,28 +27,12 @@
             <form action="/warm">
                 <input type="submit" value="warm" placeholder="warm">
             </form>
-            {{!-- <% if(success != '') { %>
-                <div class="success">
-                    <h1>
-                        Success
-                    </h1>
-                    <p>
-                        <%= success %>
-                    </p>
-                </div>
-                <% } %>
-            <div id="response">
-                <% if(Places != '') { %>
-                    <h1>
-                        Places
-                    </h1>
-                    <p>
-                        <%= Places %>
-                    </p>
-                <% } %>
-            </div> --}}
-            {{success}}
-            {{Places}}
+            {{success}}<br>
+            <ul>
+                {{#each Places}}
+                <li>{{this}}</li>
+                {{/each}}
+            </ul>
             {{error}}
         </div>
         
