--- a/views/index.hbs
+++ b/views/index.hbs
@@ -68,6 +68,11 @@
                 <form action="/warm">
                     <input type="submit" value="WARM" placeholder="WARM" class="btn btn-warning btn-lg btn-block place-btn">
                 </form>
+                {{!-- <form method="POST" action="/search">
+                    <input type="text" placeholder="name" name="name">
+                    <input type="number" placeholder="age" name="age">
+                    <input type="submit" value="Submit" placeholder="submit">
+                </form> --}}
             </div>
 
             <div class="alert alert-dismissible alert-success">
