--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,15 +11,6 @@
     </head>
     <body>
         <div class="login-box container">
-            {{!-- <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-                SAFAR
-                <div class="collapse navbar-collapse" id="navbarColor01">
-                    <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-                    </form>
-                </div>
-            </nav> --}}
             <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <a class="navbar-brand" href="#"><h1 style="padding-left: 20px;">SAFAR</h1></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -93,11 +84,6 @@
                         </div>
                     </div>
                 </div>
-                {{!-- <form method="POST" action="/search">
-                    <input type="text" placeholder="name" name="name">
-                    <input type="number" placeholder="age" name="age">
-                    <input type="submit" value="Submit" placeholder="submit">
-                </form> --}}
             </div>
 
             <div class="alert alert-dismissible alert-success">
@@ -113,32 +99,9 @@
                     <a href="{{this.maplink}}" target="_blank">Go To Map</a>
                 </li>
                 {{/each}}
-                    <div class="alert alert-dismissible alert-warning" id="myModal">
-                    <span class="close">&times;</span>
-                <h4 class="alert-heading">Warning!</h4>
-                <p class="mb-0">{{error}}</p>
-                </div>
+                <p>{{error}}</p>
             </ul>
         </div>
-        <script>
-            var modal = document.getElementById("myModal");
-            var span = document.getElementsByClassName("close")[0]; 
-            function required()
-            {
-                var empt = document.forms["form1"]["name"].value;
-                if (empt == "")
-                 modal.style.display = "block";
-
-                span.onclick = function() {
-                   modal.style.display = "none";
-                }
-                window.onclick = function(event) {
-                    if (event.target == modal) {
-                        modal.style.display = "none";
-                    }
-                }
-            }  
-        </script>
 
     </body>
 
