--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,3 +21,19 @@
     height: 30%;
     width: 90%;
 }
+#sticky-footer {
+    flex-shrink: none;
+}
+hr {
+    color: aliceblue;
+    height: 1px;
+    width: 80%;
+}
+.devs {
+    margin-left: 15px;
+    font-size: large;
+    background: white;
+    border-radius: 50%;
+    padding: 7px;
+    color: black;
+}
