--- a/views/index.hbs
+++ b/views/index.hbs
@@ -102,7 +102,56 @@
                 <p>{{error}}</p>
             </ul>
         </div>
+        {{!-- For Rendering Map --}}
+        <div class="map">
 
+        </div>
+        <hr>
+        <footer class="page-footer font-small unique-color-dark">
+
+        <div class="container text-center text-md-left mt-5">
+
+            <div class="row mt-3">
+
+            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+
+                <h6 class="text-uppercase font-weight-bold">About Us</h6>
+                <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                <p>Safar is a tourist destination website to give suggestions about the perfect places around the world for you to visit!</p>
+
+            </div>
+            <div class="col-md-3 col-lg-2 col-xl-4 mx-auto mb-4">
+
+                <h6 class="text-uppercase font-weight-bold">Developers</h6>
+                <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                <p>
+                Rahul Kumar Gupta
+                <a href="https://github.com/technisRahulk" target="_blank"><i class="fab fa-linkedin mr-3 devs"></i></a> <a href="https://www.linkedin.com/in/rahul-kumar-gupta-092663176" target="_blank"><i class="fab fa-github mr-3 devs"></i></a>
+                </p>
+                <p>
+                Anuva Bhattacharjee
+                <a href="https://github.com/anuva04" target="_blank"><i class="fab fa-linkedin mr-3 devs"></i></a> <a href="https://www.linkedin.com/in/anuva-bhattacharjee-2923b5170" target="_blank"><i class="fab fa-github mr-3 devs"></i></a>
+                </p>
+
+            </div>
+            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+
+                <h6 class="text-uppercase font-weight-bold">Contact Us at</h6>
+                <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                <p>
+                <i class="fas fa-envelope mr-3"></i> safarproject2020@gmail.com</p>
+                <p>
+
+            </div>
+
+            </div>
+
+        </div>
+        <div class="footer-copyright text-center py-3">© 2020 Copyright:
+            <a href="#"> #AaramSeTeam</a>
+        </div>
+
+        </footer>
     </body>
 
 </html>
