--- a/views/index.hbs
+++ b/views/index.hbs
@@ -60,9 +60,7 @@
                 <div class="row">
                     <div class="col-sm-4">
                         <div class="card text-white bg-info mb-3" style="max-width: 20rem;">
-                            <div class="card-body">
-                                <h4 class="card-title" style="text-align: center; font-size: 200px;"><i class="fas fa-cloud-sun-rain"></i></h4>
-                            </div>
+                            <img style="height: 200px; width: 100%; display: block;" src="/images/rainy.jpeg" alt="Card image">
                             <div class="card-header">
                                 <form action="/rainy">
                                     <input type="submit" value="RAINY" placeholder="RAINY" class="btn btn-info btn-lg btn-block place-btn">
@@ -72,9 +70,7 @@
                     </div>
                     <div class="col-sm-4">
                         <div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
-                            <div class="card-body">
-                                <h4 class="card-title" style="text-align: center; font-size: 200px;"><i class="fas fa-snowflake"></i></h4>
-                            </div>
+                            <img style="height: 200px; width: 100%; display: block;" src="/images/cold.jpg" alt="Card image">
                             <div class="card-header">
                                 <form action="/cold">
                                     <input type="submit" value="COLD" placeholder="COLD" class="btn btn-primary btn-lg btn-block place-btn">
@@ -84,9 +80,7 @@
                     </div>
                     <div class="col-sm-4">
                         <div class="card text-white bg-warning mb-3" style="max-width: 20rem;">
-                            <div class="card-body">
-                                <h4 class="card-title" style="text-align: center; font-size: 200px;"><i class="fas fa-sun"></i></h4>
-                            </div>
+                            <img style="height: 200px; width: 100%; display: block;" src="/images/hot.jpg" alt="Card image">
                             <div class="card-header">
                                 <form action="/warm">
                                     <input type="submit" value="WARM" placeholder="WARM" class="btn btn-warning btn-lg btn-block place-btn">
@@ -113,7 +107,7 @@
                 <p>{{error}}</p>
             </ul>
         </div>
-         {{!-- For Rendering Map --}}
+        {{!-- For Rendering Map --}}
         <div id="map"></div>
         <hr>
         <footer class="page-footer font-small unique-color-dark">
