--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,20 +5,9 @@
         <title>
             Safar
         </title>
-        <style>
-        #map {
-        height: 50%;
-        }
-        html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
-        </style>
         <link rel="stylesheet" type="text/css" href="css\bootstrap-dark.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
         <link rel="stylesheet" type="text/css" href="css\style.css">
-
     </head>
     <body>
         <div class="login-box container">
@@ -98,15 +87,19 @@
             </div>
 
             <div class="alert alert-dismissible alert-success">
+                
                 {{success}}
             </div>
             <br>
             <ul class="list-group">
+                
                 {{#each Places}}
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                     Location: {{this.place}} <br>
                     Temperature: {{this.temp}} <br>
                     Precipitation: {{this.precipitation}} <br>
+                    Latitude:{{this.lat}}<br>
+                    Longitude:{{this.lng}}<br>
                     <a href="{{this.maplink}}" target="_blank">Go To Map</a>
                 </li>
                 {{/each}}
@@ -161,7 +154,6 @@
         </div>
 
         </footer>
-
         <script src="js\script.js" ></script>
         <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpNIAovfwk8ku78E7bKGA5XlLPlKdaJfI&callback=initMap">
