--- a/views/index.hbs
+++ b/views/index.hbs
@@ -85,17 +85,15 @@
                 {{success}}
             </div>
             <br>
-            <ul class="list-group">
-                
+            <ul >
                 {{#each Places}}
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Location: {{this.place}} <br>
-                    Temperature: {{this.temp}} <br>
+              <button type="button" class="btn btn-primary btn-lg" style="padding: 0.5em 3em 0.5em 3em;text-align:center;margin-bottom:0.4em;">
+                  {{this.place}} </button>
+                    {{!-- Temperature: {{this.temp}} <br>
                     Precipitation: {{this.precipitation}} <br>
                     Latitude:{{this.lat}}<br>
                     Longitude:{{this.lng}}<br>
-                    <a href="{{this.maplink}}" target="_blank">Go To Map</a>
-                </li>
+                    <a href="{{this.maplink}}" target="_blank">Go To Map</a> --}}
                 {{/each}}
                 <p>{{error}}</p>
             </ul>
@@ -152,8 +150,8 @@
 
     function initMap() {
         var map = new google.maps.Map(document.getElementById('map'), {
-            zoom: 3,
-            center: {lat: 34.0479, lng: 100.6197}
+            zoom: 2,
+            center: {lat:34.0479, lng: 100.6197}
         });
 
         // Create an array of alphabetical characters used to label the markers.
@@ -168,10 +166,10 @@
         });
         var len = markers.length
         console.log(len)
-        for(var i=0; i<3; i++){
+        for(var i=0; i<len; i++){
             markers[i].addListener('click', function() {
-            map.setZoom(8);
-            map.setCenter(markers[i].getPosition());
+            map.setZoom(12);
+            //map.setCenter(markers[i].getPosition());
         });
         }
 
