search route improved

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -88,7 +88,7 @@
             <ul >
                 {{#each Places}}
             <a href="https://www.google.com/maps/search/?api=1&query={{this.place}}" target="_blank">
-                <button type="button" class="btn btn-primary btn-lg" style="padding: 0.5em 3em 0.5em 3em;text-align:center;margin-bottom:0.4em;">
+                <button type="button" class="btn btn-primary btn-lg" style="padding: 0.5em 3em 0.5em 3em;text-align:center;margin:0.1em 0.1cem 0.4em;">
                     {{this.place}}
                 </button>
             </a>
