--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,3 +65,13 @@ hr {
     margin-bottom: 10px;
     margin-right: 10px;
 }
+@media screen and (max-width: 990px){
+    #search-form{
+        float: right;
+        margin-right: 10px;
+        transform: translateY(-130px);
+    }
+    #top-nav{
+        height: 120px;
+    }
+}
