--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,13 +11,13 @@
     </head>
     <body>
         <div class="login-box container">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="top-nav">
             <a class="navbar-brand" href="#"><h1 style="padding-left: 20px;">SAFAR</h1></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+            {{!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-            </button>
+            </button> --}}
 
-            <div class="collapse navbar-collapse" id="navbarColor01">
+            <div class="navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="#"> <span class="sr-only">(current)</span></a>
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="#"></a>
                     </li>
                 </ul>
-                <form name="form1" method="post" action="/search" class="form-inline my-2 my-lg-0">
+                <form name="form1" method="post" action="/search" class="form-inline my-2 my-lg-0" id="search-form">
                     <input class="form-control mr-sm-2" id="search" type="text" placeholder="Search" name="name" required>
                     <button class="btn btn-secondary my-2 my-sm-0" id="submit" type="submit">Search</button>
                 </form>
