--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,9 +13,6 @@
         <div class="login-box container">
             <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="top-nav">
             <a class="navbar-brand" href="#"><h1 style="padding-left: 20px;">SAFAR</h1></a>
-            {{!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button> --}}
 
             <div class="navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav mr-auto">
@@ -23,7 +20,11 @@
                         <a class="nav-link" href="#"> <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"></a>
+                        <a class="nav-link" href="#">
+                            <form name="form1" method="get" action="/update" class="form-inline my-2 my-lg-0">
+                                <button class="btn btn-success my-2 my-sm-0" id="submit" type="submit">Update</button>
+                            </form>
+                        </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"></a>
