--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,8 +14,10 @@
         <div class="login-box container">
             <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="top-nav">
             <a class="navbar-brand" href="#"><h1 style="padding-left: 20px;">SAFAR</h1></a>
-
-            <div class="navbar-collapse" id="navbarColor01">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse show" id="navbarColor01">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="#"> <span class="sr-only">(current)</span></a>
