--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        {{!-- <meta name="viewport" content="width=device-width, initial-scale=1"> --}}
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>
             Safar
         </title>
@@ -13,10 +13,10 @@
     <body>
         <div class="login-box container">
             <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="top-nav">
-            <a class="navbar-brand" href="#"><h1 style="padding-left: 20px;">SAFAR</h1></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#"><h1 style="padding-left: 20px;" id="safar">SAFAR</h1></a>
+            {{!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-            </button>
+            </button> --}}
             <div class="navbar-collapse collapse show" id="navbarColor01">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
@@ -25,7 +25,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">
                             <form name="form1" method="get" action="/update" class="form-inline my-2 my-lg-0">
-                                <button class="btn btn-success my-2 my-sm-0" id="submit" type="submit">Update</button>
+                                <button class="btn btn-success my-2 my-sm-0" id="update-submit" type="submit">Update</button>
                             </form>
                         </a>
                     </li>
